# clasificacion_enfermedades_papa_api

./: .gitignore  README.md  ensamble_papa_completo_compatible.keras  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  models.py  schemas.py  seed.py
app/routers/: diseases.py  predictions.py
app/services/: model_service.py
docs/: database_models.md
scripts/: init_db.py  patch_keras_model.py
