[project]
name = "potato-disease-backend"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "SQLAlchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "ai-edge-litert==2.1.5",
    "pillow==11.0.0",
    "numpy==1.26.4",
]
